--- a/chapter12_part01_text-generation.ipynb
+++ b/chapter12_part01_text-generation.ipynb
@@ -339,7 +339,8 @@
         "            query=inputs,\n",
         "            value=inputs,\n",
         "            key=inputs,\n",
-        "            use_causal_mask=True)\n",
+        "            #use_causal_mask=True, #### 이거 삭제 \n",
+        "            )\n",
         "            # attention_mask=causal_mask)\n",
         "        attention_output_1 = self.layernorm_1(inputs + attention_output_1)\n",
         "        attention_output_2 = self.attention_2(\n",
