--- a/chapter12_part01_text-generation.ipynb
+++ b/chapter12_part01_text-generation.ipynb
@@ -338,7 +338,7 @@
         "        attention_output_1 = self.attention_1(\n",
         "            query=inputs,\n",
         "            value=inputs,\n",
-        "            key=inputs,\n",
+        "            key=inputs\n",
         "            #use_causal_mask=True, #이거 삭제 \n",
         "            )\n",
         "            # attention_mask=causal_mask)\n",
